--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -14,32 +14,44 @@
   <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NHttp" version="0.1.9.0" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net47" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net47" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net47" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net47" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net47" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net47" />
@@ -58,6 +70,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.0-preview2-26406-04" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
@@ -69,7 +82,7 @@
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview2-26406-04" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
