--- a/src/Database/packages.config
+++ b/src/Database/packages.config
@@ -11,13 +11,20 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.6.1" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
   <package id="System.Composition" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net47" />
   <package id="System.Composition.Convention" version="1.0.31" targetFramework="net47" />
