--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -15,7 +15,7 @@
   <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
@@ -28,7 +28,7 @@
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net47" />
